...
 *   <BaseDialog.Header title="Confirm Action" showWarning />
 *   <BaseDialog.Content>
 *     <p>Are you sure?</p>
 *   </BaseDialog.Content>
 *   <BaseDialog.Actions>
 *     <BaseDialog.CancelButton onClick={onClose}>Cancel</BaseDialog.CancelButton>
 *     <BaseDialog.ActionButton onClick={handleConfirm}>Confirm</BaseDialog.ActionButton>
 *   </BaseDialog.Actions>
 * </BaseDialog>
 * ```
 */

import React, { createContext, useContext } from 'react';
...
