...
          onChangeValue={onInAmountChange}
          token={inToken}
          onTokenPress={onInTokenPress}
          usdValue={inUsdValue}
          availableBalance={inToken?.balance}
          editable={true}
          placeholder="Enter an amount"
        />

        {reviewWarning && <WarningText>{reviewWarning}</WarningText>}

        {/* You Receive */}
        <SwapAmountInput
...
