...
    <SettingsScreenLayout
      title={t('settings.account_edit.name_section')}
      onBack={onBack}
    >
      <View style={styles.inputContainer}>
        <TextInput
          testID="account-name-input"
          style={[styles.input, error ? styles.inputError : undefined]}
          value={name}
          onChangeText={handleChangeText}
          placeholder={t('settings.account_add.set_name_placeholder')}
          placeholderTextColor={colors.text.tertiary}
          autoFocus
...

      <Text style={styles.disclaimer}>
        {t('settings.wallets.edit_name_disclaimer')}
      </Text>

      <View style={styles.buttonContainer}>
        <PrimaryButton testID="account-name-save-button" onPress={handleSave}>
          {t('actions.save')}
        </PrimaryButton>
      </View>
    </SettingsScreenLayout>
  );
}
...
