...

  const sections: SectionItem[] = [
    {
      labelKey: 'settings.account_edit.name_section',
      icon: 'text-outline',
      onPress: onEditName,
      testID: 'account-edit-name',
    },
    {
      labelKey: 'settings.account_edit.avatar_section',
      icon: 'person-circle-outline',
      onPress: onEditAvatar,
      testID: 'account-edit-avatar',
...
